# server-cli

./: README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/server/: cli_application.py  cli_publisher.py
nagare/services/: cli_exceptions_handler.py
src/nagare/publishers/: cli_publisher.py
src/nagare/server/: cli_application.py  cli_publisher.py
src/nagare/services/: cli_exceptions_handler.py
