[metadata]
name = nagare-server-cli
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Nagare command line application
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/server-cli
    Tracker = https://github.com/nagareproject/server-cli/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-config
    nagare-services
    nagare-commands
    nagare-server

[options.entry_points]
nagare.services =
    exceptions = nagare.services.cli_exceptions_handler:Exceptions

nagare.applications =
    cli = nagare.server.cli_application:CLIApp

nagare.publishers =
    cli = nagare.server.cli_publisher:Publisher

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
